# GenAICategorizer

./: .dockerignore  .gitignore  Dockerfile  README.md  optimization_guide.md  performance_analysis.md  pyproject.toml  requirements.txt  requirements_optimized.txt
.github/workflows/: ci.yml  codeql.yml  dependency-scan.yml  pages.yml  ui-test.yml
config/: categories.json  voice_keywords.json
data/evaluation/: category_eval_dataset.csv
docs/: index.html
src/: __init__.py  app.py  benchmark.py  categorization.py  clustering.py  clustering_optimized.py  config.py  data_processing.py  data_processing_optimized.py  embedding.py  embedding_optimized.py  example.py  main.py  performance_benchmark.py  summarizer.py  test_categorization.py  test_topic_modeling.py  topic_modeling.py  visualization.py
src/static/: index.html
tests/: conftest.py  test_app_api.py  test_clustering.py  test_data_processing.py  test_embedding.py  test_pipeline_e2e.py  test_ui.py
