[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-categorizer"
version = "1.0.0"
description = "Categorize AI assistant conversations (Claude, ChatGPT) by topic using NLP and keyword-based classification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Walliiee"}]
keywords = ["nlp", "categorization", "ai", "conversations", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.2",
    "langdetect>=1.0.9",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
ui = [
    "pytest>=7.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
]
performance = [
    "orjson>=3.8.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
]

[project.urls]
Repository = "https://github.com/Walliiee/GenAICategorizer"
Issues = "https://github.com/Walliiee/GenAICategorizer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "ui: Playwright browser-based UI tests (require the 'ui' extra)",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
